08/ingress/home.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-deploy
  namespace: testns
spec:
  replicas: 1
  selector:
    matchLabels:
      name:  home
  template:
    metadata:
      name: home-pod
      labels: 
        name: home
    spec:
      containers:
        - name: home-container
          image: httpd
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata: 
  name: home-service
  namespace: testns
spec:
  type: ClusterIP
  selector:
    name: home
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
