08/ingress/pay.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pay-deploy
  namespace: testns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pay
  template:
    metadata:
      name: pay-pod
      labels:
        app: pay   
    spec: 
      containers:
        - name: pay-container
          image: whatwant/node-web:1.0
          ports:
            - containerPort: 8080
---
# deplyment의 labels 와  port에 주의하면서 짜야함
apiVersion: v1
kind: Service
metadata:
  name: pay-service
  namespace: testns
spec:
  type: ClusterIP
  selector:
    app: pay
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      # container Port와 일치해야한다.
